// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> _isMultiline should render a input tag if _isMultiline is false(default) 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> _isMultiline should render a textarea tag if _isMultiline is true 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> default should render a TextInput with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> disabled should render a disabled TextInput 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 csqfTg"
          disabled=""
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
            disabled=""
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
              style="transform: translate(-NaNpx,-0px);"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 gCGApD"
                color="shade.980"
                data-testid="ds-text"
                disabled=""
                for="sample-id"
                value="some value"
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 OIkus Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                disabled=""
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value="some value"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
            disabled=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> errorText should render a TextInput with error text if errorText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hGbqge"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
        <div
          class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 kjotAU"
              color="negative.900"
              data-testid="ds-text"
            >
              This is error text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> errorText with maxLength should render a TextInput with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hGbqge"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                maxlength="10"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
        <div
          class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 kjotAU"
              color="negative.900"
              data-testid="ds-text"
            >
              This is error text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hCGFPT"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> focus should have focus when input is focused 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
              style="transform: translate(-NaNpx,-0px);"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 eSRhGc"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> helpText should render a TextInput with help text if helpText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
        <div
          class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> helpText with maxLength should render a TextInput with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                maxlength="10"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
        <div
          class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hCGFPT"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> iconLeft should render a TextInput with iconLeft 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <svg
                aria-hidden="true"
                class="Flexweb__Flex-sc-1yhcoea-0 fRwLwk Spaceweb__Space-sc-1abqisc-0 kwhRNB"
                data-testid="ds-icon"
                fill="rgba(22, 47, 86, 0.38)"
                focusable="false"
                height="16"
                name="nodejs"
                testID="input-icon"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
                />
              </svg>
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> iconRight should render a TextInput with iconRight 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
                data-testid="ds-text-input-right-icon"
              >
                <svg
                  aria-hidden="true"
                  class="Flexweb__Flex-sc-1yhcoea-0 fRwLwk Spaceweb__Space-sc-1abqisc-0 jbmCTB"
                  data-testid="ds-icon"
                  fill="rgba(22, 47, 86, 0.38)"
                  focusable="false"
                  height="16"
                  name="nodejs"
                  testID="input-icon"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label should render a TextInput with labelPosition on left and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <label
        class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF Spaceweb__Space-sc-1abqisc-0 hKAKbW"
        color="shade.980"
        data-testid="ds-text"
        for="sample-id"
        id="sample-id"
        value=""
        width="medium"
      >
        Sample Label
      </label>
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 llqqT Spaceweb__Space-sc-1abqisc-0 jstZmD Sizeweb__Size-sc-1e5yf1-0 eulWzv"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 kvMYDL Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 driWyD Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label should render a TextInput with labelPosition on top(default) and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <label
      class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 kRUpxY Spaceweb__Space-sc-1abqisc-0 ekUIxk"
      color="shade.980"
      data-testid="ds-text"
      for="sample-id"
      id="sample-id"
      value=""
      width="medium"
    >
      Sample Label
    </label>
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 llqqT Spaceweb__Space-sc-1abqisc-0 jstZmD Sizeweb__Size-sc-1e5yf1-0 eulWzv"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 kvMYDL Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 driWyD Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label should render a TextInput with labelPosition on top(default) and variant outlined(default) 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> prefix should render a TextInput with prefix 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <div
                class="Textweb__Text-sc-1qrdpx3-0 eJOkfd Spaceweb__Space-sc-1abqisc-0 kwhRNB"
                color="shade.950"
                data-testid="ds-text"
              >
                ₹
              </div>
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> suffix should render a TextInput with suffix 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
              <div
                class="Textweb__Text-sc-1qrdpx3-0 eJOkfd Spaceweb__Space-sc-1abqisc-0 jbmCTB"
                color="shade.950"
                data-testid="ds-text"
              >
                ₹
              </div>
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant should render a filled variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <label
      class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 kRUpxY Spaceweb__Space-sc-1abqisc-0 ekUIxk"
      color="shade.980"
      data-testid="ds-text"
      value=""
      width="medium"
    >
      Label
    </label>
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 llqqT Spaceweb__Space-sc-1abqisc-0 jstZmD Sizeweb__Size-sc-1e5yf1-0 eulWzv"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 kvMYDL Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 driWyD Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant should render a outlined variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width should render a TextInput with auto width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="auto"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width should render a TextInput with medium(default) width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width should render a TextInput with small width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="small"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 eKIlnO Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <input
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
